<?xml version="1.0"?>
<package format="3">
  <name>hwt906p_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for the WitMotion HWT906P IMU.</description>
  <maintainer email="wzz@example.com">wzz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
